# bot_aiogram_test_task

./: README.md  main.py  pyproject.toml
